new_readme_file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-    <!-- Main image positoned by CSS -->
+    <!-- Hero image positoned by CSS -->
      <section class="hero"></section>
      
     <!-- Content of the website -->
@@ -61,7 +61,7 @@
 
      </section>
 
-
+<!-- A sidebar -->
      <section class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
